<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_plant_page_upload_button"
            android:background="@color/Green"
            android:textColor="@color/white"
            android:padding="@dimen/default_margin"
            style="@style/TitleTextStyle"
            />


        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending2"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_plant_page_name_input"
        android:paddingStart="@dimen/item_margin"
        style="@style/DefaultTextStyle"
        />


    <EditText
        android:id="@+id/descriptin_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_plant_page_description_input"
        android:paddingStart="@dimen/item_margin"
        style="@style/DefaultTextStyle"
        />

    <Spinner
        android:id="@+id/grow_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:entries="@array/add_plant_page_grow_spinner_input"
        android:paddingStart="@dimen/item_margin"
        />

    <Spinner
        android:id="@+id/water_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:entries="@array/add_plant_page_water_spinner_input"
        android:paddingStart="@dimen/item_margin"
        />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/DarkGray"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/add_plant_page_confim_button"
        android:textSize="24dp"
        android:textColor="@color/white"
        />

</LinearLayout>