<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1" />


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/Popup_plant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Popup_plant_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginStart="30dp"
        style="@style/TitleTextStyle"/>

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="@dimen/default_margin"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <TextView
        android:id="@+id/Popup_plant_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/Popup_plant_description_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        style= "@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/Popup_plant_description_subtitle_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Popup_plant_description_subtitle_title"
        app:layout_constraintStart_toStartOf="@+id/Popup_plant_description_title"
        app:layout_constraintTop_toBottomOf="@+id/Popup_plant_description_title"
        style="@style/SubtitleTextStyle"/>

    <TextView
        android:id="@+id/Popup_plant_grow_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/Popup_plant_grow_title"
        app:layout_constraintStart_toStartOf="@+id/Popup_plant_description_subtitle_title"
        app:layout_constraintTop_toBottomOf="@+id/Popup_plant_description_subtitle_title" />

    <TextView
        android:id="@+id/Popup_plant_grow_subtitle_title"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Popup_plant_grow_subtitle_title"
        app:layout_constraintStart_toStartOf="@+id/Popup_plant_grow_title"
        app:layout_constraintTop_toBottomOf="@+id/Popup_plant_grow_title" />

    <TextView
        android:id="@+id/Popup_plant_water_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/Popup_plant_water_title"
        app:layout_constraintStart_toStartOf="@+id/Popup_plant_grow_subtitle_title"
        app:layout_constraintTop_toBottomOf="@+id/Popup_plant_grow_subtitle_title" />

    <TextView
        android:id="@+id/Popup_plant_water_subtitle_title"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Popup_plant_water_subtitle_title"
        app:layout_constraintStart_toStartOf="@+id/Popup_plant_water_title"
        app:layout_constraintTop_toBottomOf="@+id/Popup_plant_water_title" />

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_margin="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Popup_plant_water_subtitle_title" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_trash"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unstar"
        android:layout_marginLeft="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />


</androidx.constraintlayout.widget.ConstraintLayout>